[package]
name = "cnvrt"
version = "0.2.0"
authors = ["Steven Confessore <steven.confessore@gmail.com>"]
edition = "2018"
description = "a crate for converting types"
license-file = "license.md"
documentation = "https://github.com/confessore/cnvrt"
homepage = "https://github.com/confessore/cnvrt"

[dependencies]
